css/style.css
html {
    font-size: 16px;
}

html, body {
    height: 100%;
}
body {
    background-color: #fafaf9;
    color: #000000;
    max-width: 800px; /* Sidorna begränsas till 800 pixlar ... */
    margin: 0 auto; /* ... och centreras. Övre/undre marginal är 0 och vänster/höger marginal bestäms lika av webbläsaren. */
    padding: 0 auto; /* Övre/undre marginal är 0, vänster/höger är 8px */
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.Header .Main .Nav .Aside .Footer{
    margin: 0;
    padding: 0;    

}
.Nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 200px;
    background-color: #f1f1f1;
  }
  
  
.Nav li a {
    display: block;
    color: #000;
    padding: 8px 16px;
    text-decoration: none;
    transition: all 1s;
}

.Nav li a:hover {
    background-color: rgb(121, 79, 79);
    color: white;
    
  }

.Nav li a.active {
    background-color: goldenrod;
    color: white;
}

.cube {
    background: rgb(133, 226, 11);
    border-radius: 12% 12%;
    height: 50px;
    width: 50px;
    transition: all 3s;
    width: 100px;
    text-align: center;
    font-size: 0.8rem;
  }

  .cube:hover {
    transform: rotate(1080deg);
  }



html, body, div {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
img { 
    max-width: 100%;
}


.Header {
    grid-area: Header;
    background-color: black;
    color: whitesmoke;
    text-align: center; 
}
.Nav { 
    grid-area: Nav; 
    background-color: black;
    color: whitesmoke;
}

.Nav ul {
    width: 100%;
    position: sticky;
    top: 0;
}
.Main {
     grid-area: Main; 
    background-color:hsl(58, 100%, 50%);
}

.Main h1 {
    text-align: center;
    font-size: 3rem;
}

.Aside { 
    grid-area: Aside; 
    background-color: black;
    color: whitesmoke;
    
}

.Footer {
     grid-area: Footer; 
    background-color: black;
    color: cornsilk;
    background-image: url("/img/avatar.png"), url("/img/sign.png");
    background-repeat: no-repeat;
    background-size: auto 75%, 50%;
    background-position: center, center;
    background-position-x: left, center;
    padding-top: 5rem;
    padding-bottom: 5rem;
    text-align: center;
    font-family: 'Abel', sans-serif;
    font-size: 1rem;
}

.grid-container {
            
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto auto auto auto auto;
    gap: 1px 1px;
    grid-template-areas:
      "Header"
      "Nav"
      "Main"
      "Aside"
      "Footer";
  }
  .flex-container {
    display: flex;
    
   
  }
  
  .flex-container div {
    border: black;
    border-style: dotted;
    width: 100%;
    margin-top: 1rem;
    margin-bottom: 1rem;
    margin-right: 1rem;
    margin-left: 1rem;
    font-size: 1.2rem;
    padding: 1rem;
  }
  .flex-container div h1{
    text-align: center;
    font-size: 2.5rem;
}

@media screen and (min-width:800px) {
    /* Layout med grid i tre kolumner */
        body{
            max-width: none;
        }
        .grid-container {
            
            display: grid;
            grid-template-columns: 100px 1fr 1fr 100px;
            grid-template-rows: 100px 1fr 100px;
            gap: 1px 1px;
            grid-template-areas:
              "Header Header Header Header"
              "Nav Main Main Aside"
              "Footer Footer Footer Footer";
          }
          .Burger{
            display: none;
        }
        .Normalnav{
            position: sticky;
            top: 0;
        }

}

@media screen and (max-width:800px) and (min-width:480px) {
    .Burger{
        display: none;
    }
   
    .Nav{
        position: sticky;
        top: 0;
    }
    .flex-container {
        display: flex;
        flex-direction: column;
        margin: 0%;
      }
    .flex-container div{
        margin: 0%;
    }
    .Nav ul {
        width: 100%;
        list-style-type: none;
        margin: 0;
        padding: 0;
        overflow: hidden;
        background-color: whitesmoke;
        
      }
      .Nav li {
        float: left;
        border-right: 1px solid red;
        border-bottom: 1px solid red;
        transition: all 3s;
      }
      .Nav li a {
        display: block;
        color: black;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
      }
    .Nav li a:hover {
        background-color: #111;
      }
      .Nav li a.active {
        
        background-color: goldenrod;
        
      }      
      
}

@media screen and (max-width:480px) {
    .flex-container {
        display: flex;
        flex-direction: column;
      }
      .flex-container div{
        margin: 0%;
    }
  
    .Nav{
        position: sticky;
        top: 0;
        display: flex;
        justify-content: center;

    }
    .NavBox{
    
        display: inline-block;
        cursor: pointer;
        width: 24px;
        height: 24px;
        background-image: url(../img/menuicon.png);
    }
.Normalnav{
    display: none;
}


}

/*For Burger menu. Some code borrowed from https://code-boxx.com/simple-responsive-pure-css-hamburger-menu/ */
#hamnav {
    width: 100%;
    text-align: center;    
  }
  
  /* Hide Hamburger */
  #hamnav label, #hamburger { 
      display: none; 
      transition: transform 1s;      
    }

    #hamnav :hover{
        transform: rotate(360deg);
    }
  
  /* Horizontal Menu Items */
  #hamitems { 
      display: flex; 
    }
  #hamitems a {
    width: 100%;
    padding: 10px;
    color: white;
    text-decoration: none;
    text-align: center;
    
  }
  #hamitems a:hover {
    background-color: #401408;
    
  }

  #hamitems a:active{
      background-color: red;
  }
      /* Show Hamburger Icon */
    #hamnav label { 
      display: inline-block; 
    }
  
    /* Break down menu items into vertical */
    #hamitems a {
      box-sizing: border-box;
      display: block;
      width: 100%;
      border-top: 1px solid #333;
    }
  
    /* Toggle Show/Hide Menu */
    #hamitems { 
        display: none; 
        
    }
    #hamnav input:checked ~ #hamitems { 
        display: block;
        
    }
    
  
  

